|
Quick Lists
|
|
Bug ID:
|
6684582
|
|
Votes
|
0
|
|
Synopsis
|
Launcher needs improved error reporting
|
|
Category
|
java:tools
|
|
Reported Against
|
|
|
Release Fixed
|
7(b27),
6u10(b22) (Bug ID:2161109)
, 6-open(b10) (Bug ID:2161342)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
|
|
Submit Date
|
04-APR-2008
|
|
Description
|
When the Java launcher fails to find the main class it reports "Could not find the main class. Program will exit." On Windows using the javaw launcher this is the only error message displayed -- there is no console window available to display a stack trace. This makes debugging Java Web Start applications (and the Java Web Start launcher itself) very difficult. The attached patch to src/share/bin/java.c (from 6u10) displays the main class name in the error message when such an error occurs.
Posted Date : 2008-04-04 18:01:25.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Yes this will make it easier to detect errors in Applications.
Posted Date : 2008-04-08 19:35:25.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |