6684582: Launcher needs improved error reporting Summary: Patch converted from TeamWare or webrev data Reviewed-by: darcy